# nanoctm

./: .gitignore  CONSTITUTION.md  NEURAL_MEMORY.md  NEXTRUN.md  NEXTRUN.sh  README.md  STAR_PLAN.md  TRAINING_LOG.md  TRAINING_RUNS.csv  TRAIN_CTMv2.sh  benchmark_plasticity.py  demo_memory.py  test_hebbian_language.py  test_kv_memory.py  test_memory_head.py  test_plural_kv.py  train_ctmv2_qwen.py
.github/workflows/: deploy-site.yml
ctm-api/: Cargo.toml
ctm-api/src/: main.rs
ctm-debugger/: Cargo.toml
ctm-debugger/src/: main.rs  render.rs
ctm-site/: Dockerfile  entrypoint.sh  index.html  nginx.conf  server.py
ctm-site/ctm-app/src/: data.ts
data/sft/: parse_claude_sessions.py  parse_zish_sessions.py  parse_zsh_history.py
nanochat/: brain.py  checkpoint_manager.py  common.py  core_eval.py  ctm_v2_block.py  dataloader.py  engine.py  episodic_memory.py  eval_config.py  flash_attention.py  gpt.py  memory_head.py  optim.py  plural.py  qwen_backbone.py  teacher.py  tick_dashboard.py  triton_sync.py  visualize.py
scripts/: base_train.py  compare_models.py  ctm_dream.py  generate_distill_data.py  prepare_sft.py  teach.py  teach_constitution.py  test_cache_plasticity.py  test_full_pipeline.py  test_generation.py  test_model_comprehensive.py  test_plasticity.py  test_qwen_backbone.py  test_sequential_compact.py  train_qwen_ctm.py
tests/: test_dataloader_remainder.py  test_engine.py
