[package]
name = "ctm-debugger"
version = "0.1.0"
edition = "2024"
description = "3D time-travel debugger for Continuous Thought Machine tick activations"

[dependencies]
# GPU rendering + GUI
egui = "0.31"
eframe = { version = "0.31", default-features = false, features = ["glow"] }

# 3D math
glam = "0.30"

# Data
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time (web-compatible Instant)
web-time = "1.1"

# Logging
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
notify = "8"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "process", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console", "Window", "Document", "Response", "Headers", "HtmlCanvasElement", "Element", "WebSocket", "MessageEvent", "ErrorEvent", "CloseEvent", "Location", "BinaryType"] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
